refactor: add cli
